--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gamesgit 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/gamesgit
+
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.driverClassName=org.postgresql.Driver
